[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Image_Assets/Enemy_Assets/SlowFieldTemp.png" type="Texture" id=1]
[ext_resource path="res://Important_Scenes/Characters/Enemies/Debuffs/AOE_DeBuff.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 1848, 1970 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="AOE_Debuff" type="Area2D"]
z_index = 3
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2, 0 )
scale = Vector2( 0.5, 0.314213 )
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_AOE_Debuff_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_AOE_Debuff_body_exited"]
